Make loading spinner smaller and align it correctly

--- a/web/css/styles.scss
+++ b/web/css/styles.scss
@@ -96,3 +96,12 @@ div#index-banner {
 .no-tickets {
     padding-top: 10px;
 }
+
+.preloader-wrapper.small.active {
+    height: 20px;
+    width: 20px;
+}
+
+.loading-toast {
+    margin-right: 10px;
+}
